[project]
name = "futurematrix-comfyui"
description = "fix output_node bug"
version = "1.0.1"
license = {file = "LICENSE"} 
dependencies = ["openai", "requests"]

[project.urls]
Repository = "https://github.com/day9011/futurematrix-comfyui"

[tool.comfy]
PublisherId = "futurematrix"
DisplayName = "futurematrix-comfyui"
Icon = ""
includes = [] 
